Basic const added in script.js to target our form data.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
           </div>
           <div class="modal-body">
             <form action="" id="taskEntry">
+
               <label for="title">Title</label><br>
               <input type="text" id="title"><br>
+
               <label for="date">Date</label><br>
               <input type="text" id="date"><br>
+
               <label for="description">Description</label><br>
               <input type="text" id="description"><br>
+
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button id="saveBtn" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button id="cancelBtn" type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
