--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button id="saveBtn" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button id="cancelBtn" type="button" class="btn btn-primary">Save changes</button>
+            <button id="cancelBtn" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button id="saveBtn" type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
